// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`system props withSystemProps() applies multiple theme values 1`] = `
<b
  blacklist={
    Array [
      "css",
      "fontFamily",
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
    ]
  }
  className="css-ad649n"
  fontFamily="sans"
  m={2}
/>
`;

exports[`system props withSystemProps() applies one theme value 1`] = `
<b
  blacklist={
    Array [
      "css",
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
    ]
  }
  className="css-1c5ij41"
  m={2}
/>
`;
